fix composer.json, fix readme

--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,11 @@
         "psr-4": {
             "Sonnt\\JwtAuth\\": "src"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            “Sonnt\\JwtAuth\\Test\\": "tests",
+            "Cake\\Test\\": "./vendor/cakephp/cakephp/tests"
+        }
     }
 }
